[package]
name = "hexmap"
version = "0.1.0"
authors = ["Jay Kickliter <jay@kickliter.com>", "Andrew Thompson <andrew@hijacked.us>"]
categories = ["science", "data-structures"]
edition = "2018"
exclude = ["/test/*"]
readme = "README.md"
keywords = ["geo", "geography", "geospatial", "gis", "h3"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jaykickliter/hexmap"
description = """
Structures for mapping geographic areas to values.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde-support = ["h3ron/use-serde", "serde"]

[dependencies]
h3ron = { version = "0.15" }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
byteorder = "*"
criterion = { version = "0.3", features = ["html_reports"] }
easybench = "1"
geo-types = "*"

[dev-dependencies.h3-lorawan-regions]
git = "https://github.com/JayKickliter/h3-lorawan-regions.git"
rev = "7eead0c263bfc4fc482b3e46e6d9f221f8253b82"
default-features = false
features = ["compact", "nocompact", "EU868", "US915"]

[[bench]]
name = "benches"
harness = false
