[package]
name = "hextree"
version = "0.1.0"
authors = ["Jay Kickliter <jay@kickliter.com>", "Andrew Thompson <andrew@hijacked.us>"]
categories = ["science", "data-structures"]
edition = "2018"
exclude = [".github/*", "/assets/*", "/test/*"]
readme = "README.md"
keywords = ["geo", "geography", "geospatial", "gis", "h3"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jaykickliter/HexTree"
repository = "https://github.com/jaykickliter/HexTree"
description = """
Location to value mapping.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde-support = ["serde"]

[dependencies]
bitfield = "0"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
byteorder = "1"
criterion = { version = "0.3", features = ["html_reports"] }
h3ron = "*"
geo-types = "0.7"

[dev-dependencies.h3-lorawan-regions]
git = "https://github.com/JayKickliter/h3-lorawan-regions.git"
rev = "7eead0c263bfc4fc482b3e46e6d9f221f8253b82"
default-features = false
features = ["compact", "nocompact", "EU868", "US915"]

[[bench]]
name = "benches"
harness = false
