[package]
name = "hextree"
version = "0.3.1"
authors = ["Jay Kickliter <jay@kickliter.com>", "Andrew Thompson <andrew@hijacked.us>"]
categories = ["science", "data-structures"]
edition = "2018"
documentation = "https://docs.rs/hextree"
exclude = [".github/*", "/assets/*", "/test/*"]
readme = "README.md"
keywords = ["geo", "geography", "geospatial", "gis", "h3"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jaykickliter/HexTree"
repository = "https://github.com/jaykickliter/HexTree"
description = """
Location to value mapping.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = ["disktree"]
disktree = [
  "byteorder",
  "memmap",
  "serde",
]
serde = ["dep:serde"]

[dependencies]
byteorder = { version = "1", optional = true }
leb128 = { version = "0.2.5", optional = true }
memmap = { version = "0.7", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
bincode = { version = "1.3.3" }
criterion = { version = "0.3", features = ["html_reports"] }
geo = "0.26.0"
h3o = { version = "0.4.0", features = ["geo"] }
h3ron = "0.15.1"
tempfile = "3"

[dev-dependencies.h3-lorawan-regions]
git = "https://github.com/JayKickliter/h3-lorawan-regions.git"
rev = "7eead0c263bfc4fc482b3e46e6d9f221f8253b82"
default-features = false
features = ["compact", "nocompact", "EU868", "US915"]

[[bench]]
name = "benches"
harness = false
